@@ -1710,6 +1710,42 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.tourneyPlayerList, 0, 1)
         return d
     # ------------------------------------------------------------------------
+    def listPlayers(self, (client, packet), id, gameId ):
+        avatar = self.service.avatars[id]
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerTableRequestPlayersList(serial = client.getSerial(),
+                                                                    game_id = gameId))
+        for packet in avatar.resetPacketsQueue():
+            count = 0
+            if packet.type == PACKET_POKER_PLAYERS_LIST:
+                self.assertEquals(packet.players, [('user0', 1000, 0), ('user1', 1000, 0)])
+                count += 1
+            self.assertEquals(count, 1)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test39_tablePlayerList(self):
+        """Test for listing players in at a table."""
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 101, 'Table2', '2-4-limit')
+        d.addCallback(self.seatTable, 0, 101)
+        d.addCallback(self.buyInTable, 0, 101, 1000)
+        d.addCallback(self.autoBlindAnte, 0, 101)
+        d.addCallback(self.sitTable, 0, 101)
+        d.addCallback(self.readyToPlay, 0, 101)
+        d2 = self.client_factory[1].established_deferred
+        d2.addCallback(self.sendExplain)
+        d2.addCallback(self.login, 1)
+        d2.addCallback(self.joinTable, 1, 101, 'Table2', '2-4-limit')
+        d2.addCallback(self.seatTable, 1, 101)
+        d2.addCallback(self.buyInTable, 1, 101, 1000)
+        d2.addCallback(self.sitTable, 1, 101)
+        d2.addCallback(self.readyToPlay, 1, 101)
+        d2.addCallback(self.listPlayers, 1, 101)
+        return defer.DeferredList((d, d2))
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -1725,7 +1761,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test38"
+#    loader.methodPrefix = "test39"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
